更改初始化配置，添加图标

--- a/TestUI/App.config
+++ b/TestUI/App.config
@@ -31,6 +31,27 @@
       <setting name="duration" serializeAs="String">
         <value>1</value>
       </setting>
+      <setting name="singfreq" serializeAs="String">
+        <value>1000</value>
+      </setting>
+      <setting name="minfreq" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="maxfreq" serializeAs="String">
+        <value>2000</value>
+      </setting>
+      <setting name="amplitude" serializeAs="String">
+        <value>0.1</value>
+      </setting>
+      <setting name="sampfreq" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="singaltype" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="channum" serializeAs="String">
+        <value>0</value>
+      </setting>
     </TestUI.Properties.Settings>
   </userSettings>
 </configuration>
