--- a/TestUI/packages.config
+++ b/TestUI/packages.config
@@ -4,8 +4,9 @@
   <package id="InteractiveDataDisplay.WPF" version="1.0.0" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net461" />
-  <package id="MathNet.Numerics" version="4.8.1" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="4.9.0" targetFramework="net461" />
   <package id="MathNet.Numerics.Data.Matlab" version="4.0.0" targetFramework="net461" />
+  <package id="MathNet.Numerics.MKL.Win-x64" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net461" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net461" />
   <package id="System.Reactive.Core" version="4.0.0" targetFramework="net461" />
